--- a/index.html
+++ b/index.html
@@ -1,21 +1,131 @@
 <!DOCTYPE html>
 <html lang="nl">
-	
+
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Sander">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 	<title>Howdy FED2324</title>
-	
+
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image/png" href="images/Logo_Mc_Groen.png">
 </head>
 
 <body>
-	<h1>Howdy FED2324</h1>
-
+	<header></header>
+	<section>
+		<img src="images\Homestyle_Burger.png" alt="burger">
+		<article>
+			<h2>Een moment voor jezelf?</h2>
+			<p>Ga voor een heerlijk feestmaal ! Probeer bijvoorbeeld de Homestyle Crispy Chicken Old Amsterdam.</p>
+			<a href="#">Kom 'm proeven</a>
+		</article>
+	</section>
+	<section>
+		<img src="images/werker.png" alt="vers bereid">
+		<article>
+			<h2>Vers voor jou bereid</h2>
+			<p>Wist je dat er nog steeds gasten zijn die ingredienten weglaten om hun burger vers te krijgen? Zonde,
+				want dat is helemaal niet nodig. Bij McDonald's wordt elke bestelling vers voor jou bereid!</p>
+			<a href="#">Meer weten?</a>
+		</article>
+	</section>
+	<section>
+		<img src="images/Happy_Meal.jpg" alt="Happy meal">
+		<article>
+			<h2>Happy Meal</h2>
+			<p>Het Happy Meal is al ruim 40 jaar een icoon op ons menu. Naast een heerlijk gevarieerd aanbod en altijd
+				groente of fruit in het Happy Meal, is er sinds 2019 altijd de keuze tussen een boekje of een speeltje.
+			</p>
+			<a href="#">Ontdek meer</a>
+		</article>
+	</section>
+	<section>
+		<img src="images/MyOrder.jpg" alt="online bestellen">
+		<article>
+			<h2>Lekker handig bestellen</h2>
+			<p>Nieuw! MyOrder in de App. Nu als pilot bij 10 restaurants.</p>
+			<a href="#">Ontdek meer</a>
+		</article>
+	</section>
+	<section>
+		<img src="images/Werken_bij_mc.png" alt="Werken bij McDonald's">
+		<article>
+			<h2>Dat is lekker werken</h2>
+			<p>Ontdek meer over werken bij McDonald's.</p>
+			<a href="#">Meer info</a>
+		</article>
+	</section>
+	<section>
+		<img src="images/Bekers.png" alt="Nieuwe bekers">
+		<article>
+			<h2>Even wennen</h2>
+			<p>De herbruikbare beker is in te leveren bij de kassa. Kies je voor een eenmalige te gebruiken beker met
+				plastic toeslag, dan mag die gewoon in de afvalbak</p>
+			<a href="#">Ontdek meer</a>
+		</article>
+	</section>
+	<article>
+		<!-- Insert image -->
+		<h3>MyMcDonald's App</h3>
+		<p>Met de MyMcDonald's App spaar je voor gratis favorieten, geniet je van fun, handige tools en persoonlijke
+			Deals!</p>
+		<a href="#">Meer informatie</a>
+	</article>
+	<article>
+		<!-- Insert image -->
+		<h3>Even you-time?</h3>
+		<p>Er is altijd een McCafé in de buurt. Daar kun je elk moment van de dag terecht voor je favoriete koffie en
+			lekkers.</p>
+		<a href="#">Meer weten?</a>
+	</article>
+	<article>
+		<!-- Insert image -->
+		<h3>Geen zorgen, we bezorgen</h3>
+		<p>Je hoeft de deur niet meer uit om te genieten van onze producten. Laat ze bezorgen met McDelivery.</p>
+		<a href="#">Nu proberen</a>
+	</article>
+	<article>
+		<!-- Insert image -->
+		<h3>Vind de allerleukste (bij)baan!</h3>
+		<p>Wil je ook werken met de leukste Crew? Start bij McDonald's en solliciteer direct.</p>
+		<a href="#">Solliciteren</a>
+	</article>
+	<article>
+		<!-- Insert image -->
+		<h3>Een gouden investering in je toekomst!</h3>
+		<p>McDonald's Academy biedt medewerkers veel verschillende mogelijkheden om te blijven leren en ontwikkelen. Wat
+			wil jij als eerste leren?</p>
+		<a href="#">Meer weten?</a>
+	</article>
+	<article>
+		<!-- Insert image -->
+		<h4>Volg ons op de voet</h4>
+		<p>Onze nieuwsbrief: van tijdelijke toppers tot waanzinnige winacties.*</p>
+		<a href="#">Schrijf je in</a>
+	</article>
+	<article>
+		<!-- Insert image -->
+		<h4>Heb je genoten?</h4>
+		<p>We zijn benieuwd naar jouw feedback. En heb je een vraag of opmerking over je restaurantbezoek? Laat het aan
+			het restaurantteam weten.*</p>
+		<a href="#">Geef je mening</a>
+	</article>
+	<ul>
+		<li>Over ons</li>
+		<li>Services</li>
+		<li>Contact</li>
+	</ul>
+	<footer>
+		<ul>
+			<li>Disclaimer</li>
+			<li>Privacy</li>
+			<li>Cookies</li>
+			<li>© Copyright © 2022 McDonald's Nederland.</li>
+		</ul>
+	</footer>
 	<script defer src="scripts/script.js"></script>
 </body>
-	
+
 </html>
