--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 			<a href="#">Kom 'm proeven</a>
 		</article>
 		<article>
-			<button class="active" onclick="showSection(1)"></button>
-			<button onclick="showSection(2)"></button>
-			<button onclick="showSection(3)"></button>
-			<button onclick="showSection(4)"></button>
-			<button onclick="showSection(5)"></button>
-			<button onclick="showSection(6)"></button>
+			<button id="buttonBack"><span></span></button>
+			<button id="button1" class="active"></button>
+			<button id="button2"></button>
+			<button id="button3"></button>
+			<button id="button4"></button>
+			<button id="button5"></button>
+			<button id="button6"></button>
+			<button id="buttonBack"><span></span></button>
 		</article>
 	</section>
 	<section id="section2">
@@ -40,12 +42,14 @@
 			<a href="#">Meer weten?</a>
 		</article>
 		<article>
-			<button onclick="showSection(1)"></button>
-			<button class="active" onclick="showSection(2)"></button>
-			<button onclick="showSection(3)"></button>
-			<button onclick="showSection(4)"></button>
-			<button onclick="showSection(5)"></button>
-			<button onclick="showSection(6)"></button>
+			<button id="buttonBack"><span></span></button>
+			<button id="button1"></button>
+			<button id="button2" class="active"></button>
+			<button id="button3"></button>
+			<button id="button4"></button>
+			<button id="button5"></button>
+			<button id="button6"></button>
+			<button id="buttonBack"><span></span></button>
 		</article>
 	</section>
 	<section id="section3">
@@ -58,12 +62,14 @@
 			<a href="#">Ontdek meer</a>
 		</article>
 		<article>
-			<button onclick="showSection(1)"></button>
-			<button onclick="showSection(2)"></button>
-			<button class="active" onclick="showSection(3)"></button>
-			<button onclick="showSection(4)"></button>
-			<button onclick="showSection(5)"></button>
-			<button onclick="showSection(6)"></button>
+			<button id="buttonBack"><span></span></button>
+			<button id="button1"></button>
+			<button id="button2"></button>
+			<button id="button3" class="active"></button>
+			<button id="button4"></button>
+			<button id="button5"></button>
+			<button id="button6"></button>
+			<button id="buttonBack"><span></span></button>
 		</article>
 	</section>
 	<section id="section4">
@@ -74,12 +80,14 @@
 			<a href="#">Ontdek meer</a>
 		</article>
 		<article>
-			<button onclick="showSection(1)"></button>
-			<button onclick="showSection(2)"></button>
-			<button onclick="showSection(3)"></button>
-			<button class="active" onclick="showSection(4)"></button>
-			<button onclick="showSection(5)"></button>
-			<button onclick="showSection(6)"></button>
+			<button id="buttonBack"><span></span></button>
+			<button id="button1"></button>
+			<button id="button2"></button>
+			<button id="button3"></button>
+			<button id="button4" class="active"></button>
+			<button id="button5"></button>
+			<button id="button6"></button>
+			<button id="buttonBack"><span></span></button>
 		</article>
 	</section>
 	<section id="section5">
@@ -90,12 +98,14 @@
 			<a href="#">Meer info</a>
 		</article>
 		<article>
-			<button onclick="showSection(1)"></button>
-			<button onclick="showSection(2)"></button>
-			<button onclick="showSection(3)"></button>
-			<button onclick="showSection(4)"></button>
-			<button class="active" onclick="showSection(5)"></button>
-			<button onclick="showSection(6)"></button>
+			<button id="buttonBack"><span></span></button>
+			<button id="button1"></button>
+			<button id="button2"></button>
+			<button id="button3"></button>
+			<button id="button4"></button>
+			<button id="button5" class="active"></button>
+			<button id="button6"></button>
+			<button id="buttonBack"><span></span></button>
 		</article>
 	</section>
 	<section id="section6">
@@ -107,12 +117,14 @@
 			<a href="#">Ontdek meer</a>
 		</article>
 		<article>
-			<button onclick="showSection(1)"></button>
-			<button onclick="showSection(2)"></button>
-			<button onclick="showSection(3)"></button>
-			<button onclick="showSection(4)"></button>
-			<button onclick="showSection(5)"></button>
-			<button class="active" onclick="showSection(6)"></button>
+			<button id="buttonBack"><span></span></button>
+			<button id="button1"></button>
+			<button id="button2"></button>
+			<button id="button3"></button>
+			<button id="button4"></button>
+			<button id="button5"></button>
+			<button id="button6" class="active"></button>
+			<button id="buttonBack"><span></span></button>
 		</article>
 	</section>
 
