--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="Sander">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Howdy FED2324</title>
+	<title>McDonald's maar beter</title>
 
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="images/Logo_Mc_Groen.png">
@@ -23,14 +23,14 @@
 			<a href="#">Kom 'm proeven</a>
 		</article>
 		<article>
-			<button id="buttonBack"><span></span></button>
+			<button id="back"><span></span></button>
 			<button id="button1" class="active"></button>
 			<button id="button2"></button>
 			<button id="button3"></button>
 			<button id="button4"></button>
 			<button id="button5"></button>
 			<button id="button6"></button>
-			<button id="buttonBack"><span></span></button>
+			<button id="forward"><span></span></button>
 		</article>
 	</section>
 	<section id="section2">
@@ -129,47 +129,47 @@
 	</section>
 
 	<article>
-		<!-- Insert image -->
+		<img src="images/mymac.jpeg" alt="De nieuwe McDonald app">
 		<h3>MyMcDonald's App</h3>
 		<p>Met de MyMcDonald's App spaar je voor gratis favorieten, geniet je van fun, handige tools en persoonlijke
 			Deals!</p>
 		<a href="#">Meer informatie</a>
 	</article>
 	<article>
-		<!-- Insert image -->
+		<img src="images/mccafe.jpeg" alt="Proef nu de nieuwe mccafe">
 		<h3>Even you-time?</h3>
 		<p>Er is altijd een McCafé in de buurt. Daar kun je elk moment van de dag terecht voor je favoriete koffie en
 			lekkers.</p>
 		<a href="#">Meer weten?</a>
 	</article>
 	<article>
-		<!-- Insert image -->
+		<img src="images/bezorg.jpeg" alt="Laat nu producten bezorgen">
 		<h3>Geen zorgen, we bezorgen</h3>
 		<p>Je hoeft de deur niet meer uit om te genieten van onze producten. Laat ze bezorgen met McDelivery.</p>
 		<a href="#">Nu proberen</a>
 	</article>
 	<article>
-		<!-- Insert image -->
+		<img src="images/werkenmc.jpeg" alt="Kom werken bij de McDonald">
 		<h3>Vind de allerleukste (bij)baan!</h3>
 		<p>Wil je ook werken met de leukste Crew? Start bij McDonald's en solliciteer direct.</p>
 		<a href="#">Solliciteren</a>
 	</article>
 	<article>
-		<!-- Insert image -->
+		<img src="images/academy.jpeg" alt="Blijf leren bij McDonald">
 		<h3>Een gouden investering in je toekomst!</h3>
 		<p>McDonald's Academy biedt medewerkers veel verschillende mogelijkheden om te blijven leren en ontwikkelen. Wat
 			wil jij als eerste leren?</p>
 		<a href="#">Meer weten?</a>
 	</article>
 	<article>
-		<!-- Insert image -->
-		<h4>Volg ons op de voet</h4>
+		<img src="images/nieuweapp.jpeg" alt="Win groot met de nieuwe app">
+		<h2>Volg ons op de voet</h4>
 		<p>Onze nieuwsbrief: van tijdelijke toppers tot waanzinnige winacties.*</p>
 		<a href="#">Schrijf je in</a>
 	</article>
 	<article>
-		<!-- Insert image -->
-		<h4>Heb je genoten?</h4>
+		<img src="images/manager.jpeg" alt="benieuwd naar jouw feedback">
+		<h2>Heb je genoten?</h4>
 		<p>We zijn benieuwd naar jouw feedback. En heb je een vraag of opmerking over je restaurantbezoek? Laat het aan
 			het restaurantteam weten.*</p>
 		<a href="#">Geef je mening</a>
